# volttron-lib-web

./: .gitignore  CONTRIBUTING.md  COPYRIGHT.md  README.md  pyproject.toml
.github/workflows/: deploy-pre-release.yml  run-test.yml  run-tests.yml
docs/source/: authentication-endpoints.rst  conf.py  index.rst  platform-endpoints.rst
src/tests/: conftest.py  platform_wrapper_with_web.py  test_admin_endpoints.py  test_certs.py  test_discovery.py  test_platform_wrapper_with_web.py  test_topic_tree.py  test_vui_endpoints.py  test_web_agent.py  test_web_authentication.py
src/volttron/services/web/: admin_endpoints.py  authenticate_endpoint.py  discovery.py  platform_web_service.py  vui_endpoints.py  vui_pubsub.py
tests/: conftest.py
tests/integration_tests/: platform_wrapper_with_web.py  test_admin.py  test_discovery.py  test_platform_wrapper_with_web.py  test_web_authentication.py  test_web_authentication_integration.py
tests/unit_tests/: test_admin_endpoints.py  test_certs.py  test_service_available.py  test_topic_tree.py  test_vui_endpoints.py  test_vui_pubsub.py  test_web_agent.py  test_web_authentication.py  test_web_authentication_units.py  web_utils.py
