
[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "volttron-lib-web"
version = "2.0.0rc1"
description = "The volttron-lib-web library extends the platform by exposing a web based REST api and allows extension web agents to register with the platform."
authors = ["VOLTTRON Team <volttron@pnnl.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-volttron/volttron-lib-web"
homepage = "https://volttron.readthedocs.io"
keywords = []
packages = [ {include="volttron", from = "src" } ]

[tool.poetry.dependencies]
argon2-cffi = "^21.3.0"
jinja2 = ">=2.10.1"
passlib = "^1.7.4"
pydantic = ">=2,<3"
PyJWT = "==1.7.1"
python = "^3.10"
requests = "^2.28.1"
volttron-lib-tree = ">=2.0.0rc1"
werkzeug = ">=2.1.2"
ws4py = ">=0.5.1"

[tool.poetry.dev-dependencies]
volttron-testing = '>=0.5.1rc4'

[tool.poetry.group.documentation.dependencies]
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

